# jobq

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
src/: EmptyQ.h  Executor.cpp  Executor.h  Job.h  JobQ.cpp  JobQ.h  Log.h  ManualSource.cpp  ManualSource.h  Source.h  ThreadName.h  TimerSource.cpp  TimerSource.h  TriggerSource.cpp  TriggerSource.h  Utils.cpp  Utils.h  Worker.cpp  Worker.h  qa.md
test/: BasicQOps.cpp  BenchQ.cpp  Executor.cpp  MPMC.cpp  Worker.cpp
